--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,7 +1,7 @@
 2004-07-18  Luc Teirlinck  <teirllm@auburn.edu>
 
-	* xdisp.c (syms_of_xdisp): Correct capitalization error in
-	`window-scroll-functions' docstring.
+	* xdisp.c (syms_of_xdisp) <window-scroll-functions>: Correct
+	capitalization error in docstring.
 
 2004-07-17  Juanma Barranquero  <lektu@terra.es>
 
