--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,24 @@
+2004-07-19  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* windows.texi: Various small changes in addition to:
+	(Window Point): Mention return value of `set-window-point'.
+	(Window Start): `pos-visible-in-window-p' disregards horizontal
+	scrolling.  Explain return value if PARTIALLY is non-nil.
+	(Vertical Scrolling): Mention PIXELS-P argument to `window-vscroll'
+	and `set-window-vscroll'.
+	(Size of Window): The argument WINDOW to `window-inside-edges',
+	`window-pixel-edges' and `window-inside-pixel-edges' is optional.
+	(Resizing Windows): Explain return value of
+	`shrink-window-if-larger-than-buffer'.
+	`window-size-fixed' automatically becomes buffer local when set.
+	(Window Configurations): Explain return value of
+	`set-window-configuration'.
+
+	* minibuf.texi (Minibuffer Misc): Add anchor for
+	`minibuffer-scroll-window'.
+
+	* positions.texi (Text Lines): Add anchor for `count-lines'.
+
 2004-07-17  Richard M. Stallman  <rms@gnu.org>
 
 	* display.texi (Overlay Properties): Adding `evaporate' prop
