--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,6 +1,7 @@
 2004-07-23  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* frame.el (modify-all-frames-parameters): Minor doc fix.
+	(set-frame-configuration): Doc fix.
 
 2004-07-23  Matt Hodges  <matt@stchem.bham.ac.uk>  (tiny change)
 
