--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-23  John Paul Wallington  <jpw@gnu.org>
+
+	* macros.texi (Defining Macros): Declaration keyword for setting
+	Edebug spec is `debug' not `edebug'.
+
 2004-07-19  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* windows.texi: Various small changes in addition to:
