--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-24  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* term/tty-colors.el (tty-color-approximate): Doc fix.
+
+	* select.el (x-get-selection, x-set-selection): Doc fixes.
+
+	* frame.el (make-frame): Doc fix.
+
 2004-07-24  Richard M. Stallman  <rms@gnu.org>
 
 	* mail/rmail.el (rmail-mime-charset-pattern):
